--- a/2.8.4/alpine3.15/nats-simple.conf
+++ b/2.8.4/alpine3.15/nats-simple.conf
@@ -4,7 +4,7 @@ port: 4222
 # HTTP monitoring port
 monitor_port: 8222
 
-server_name=n1-c1
+jetstream:enabled
 
 websocket {
     # Specify a host and port to listen for websocket connections
@@ -116,20 +116,3 @@ websocket {
     #}
 }
 
-jetstream {
-   store_dir=/nats/storage
-    // 1GB
-   max_memory_store: 1073741824
-
-    // 10GB
-   max_file_store: 10737418240
-}
-
-cluster {
-  name: C1
-  listen: 172.17.0.4:6222
-  routes: [
-    nats-route://n2-c1:6222
-    nats-route://n3-c1:6222
-  ]
-}
